Playing with redirect

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=doclockh.github.io" />
+  <meta http-equiv="refresh" content="0; url=http://doclockh.github.io" />
 </head>
 <body>
 </body>
